Blog Bufixed,CKEditor added

--- a/FinalProjectVR/appsettings.json
+++ b/FinalProjectVR/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=VR;Database=CrasFinalProject9Db;Trusted_Connection=True;Encrypt=false;"
+  //},
+
   "AllowedHosts": "*"
 }
